manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-dot-net-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example-dot-net-app
  template:
    metadata:
      labels:
        app: example-dot-net-app
    spec:
      containers:
      - name: example-dot-net-app
        image: image-registry.openshift-image-registry.svc:5000/ocp-example-dot-net-app-images/example-dot-net-app:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.25"
            memory: "256Mi"
