manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-dot-net-app
spec:
  selector:
    app: example-dot-net-app
  ports:
  - protocol: TCP
    name: https
    port: 443
    targetPort: 8080
